--- a/style2.css
+++ b/style2.css
@@ -74,7 +74,7 @@
   }
   section {
     height: 100vh;
-    background: url(../img/Abstract-03.jpg) no-repeat;
+    background: url(Abstract-03.jpg) no-repeat;
     background-position: top;
     background-size: cover;
   }
