--- a/style3.css
+++ b/style3.css
@@ -87,7 +87,7 @@ a:active a:hover{
 
 section{
     height: 100vh;
-    background: url(../img/Abstract-03.jpg);
+    background: url(Abstract-03.jpg);
     background-position: top;
     background-size: cover;
 }
@@ -151,7 +151,7 @@ section{
   
 .card-image {
     background-color: rgb(236, 236, 236);
-    background: url(../img/car-meet-photo-1.jpg);
+    background: url(car-meet-photo-1.jpg);
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
@@ -211,7 +211,7 @@ section{
   
 .card-image1 {
     background-color: rgb(236, 236, 236);
-    background: url(../img/cover-image4.jpg);
+    background: url(cover-image4.jpg);
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
