--- a/style3.css
+++ b/style3.css
@@ -87,7 +87,7 @@ a:active a:hover{
 
 section{
     height: 100vh;
-    background: url(../img/Abstract-03.jpg);
+    background: url(Abstract-03.jpg);
     background-position: top;
     background-size: cover;
 }
@@ -176,7 +176,7 @@ section{
   
 .card-image {
     background-color: rgb(236, 236, 236);
-    background: url(../img/car-meet-photo-1.jpg);
+    background: url(mclaren.jpg);
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
@@ -238,7 +238,7 @@ section{
   
 .card-image1 {
     background-color: rgb(236, 236, 236);
-    background: url(../img/cover-image4.jpg);
+    background: url(lamboghini.jpg);
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
@@ -298,7 +298,7 @@ section{
   
 .card-image2 {
     background-color: rgb(236, 236, 236);
-    background: url(../img/cover-image4.jpg);
+    background: url(porsche.jpg);
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
