--- a/style3.css
+++ b/style3.css
@@ -87,7 +87,7 @@ a:active a:hover{
 
 section{
     height: 100vh;
-    background: url(Abstract-03.jpg);
+    background: url(../img/Abstract-03.jpg);
     background-position: top;
     background-size: cover;
 }
@@ -106,6 +106,7 @@ section{
     .container{
         display: none;
     }
+
 }
   
   @media (max-width: 858px) {
@@ -149,19 +150,12 @@ section{
         display: none;
     }
 
+    .card{
+        display: none;
+    }
 }
 
 /* End of background code, start of card code*/
-
-/*
-.card {
-    width: 190px;
-    height: 274px;
-    background: white;
-    padding: .4em;
-    border-radius: 6px;
-    margin: 100px;
-}*/
 
 .card{
     width: 190px;
@@ -171,12 +165,14 @@ section{
     border-radius: 6px;
     position: absolute;
     top: 9em;
-    left: 7em;
+    left: 23em;
 }
   
 .card-image {
     background-color: rgb(236, 236, 236);
-    background: url(mclaren.jpg);
+    background: url(../img/lamboghini.jpg) center;
+    align-items: center;
+    overflow: hidden;
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
@@ -238,7 +234,7 @@ section{
   
 .card-image1 {
     background-color: rgb(236, 236, 236);
-    background: url(lamboghini.jpg);
+    background: url(../img/dropped-audi.png) center;
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
@@ -298,7 +294,7 @@ section{
   
 .card-image2 {
     background-color: rgb(236, 236, 236);
-    background: url(porsche.jpg);
+    background: url(../img/lamboghini-orange.png) center;
     width: 100%;
     height: 60%;
     border-radius: 6px 6px 0 0;
@@ -352,7 +348,7 @@ section{
     width: 190px;
     height: 274px;
     top: 9em;
-    left: 23em;
+    left: 7em;
     border-radius: .6em;
     color: white;
     text-align: center;
@@ -394,21 +390,19 @@ section{
     background: linear-gradient(43deg, rgb(65, 88, 208) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%);
 }
   
-.subtitle {
-    transform: translateY(160px);
-    color: rgb(134, 110, 221);
-    text-align: center;
-    width: 100%;
-}
-  
 .title {
     opacity: 0;
     transition-duration: 300ms;
     transition-timing-function: ease-in-out-out;
     transition-delay: 100ms;
     position: absolute;
+    padding: 40px;
     font-size: x-large;
-    font-weight: bold;
+    letter-spacing: -1px;
+    text-shadow: 3px 5px 20px #230622aa;
+    font-weight: 800;
+    font-style: italic;
+    color: white;
 }
   
 .tracker:hover ~ #card .title {
@@ -718,4 +712,136 @@ section{
      /* Internet Explorer/Edge */
     user-select: none;
      /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
+
+.modal{
+    width: fit-content;
+    height: fit-content;
+    background: #fff;
+    box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 26px;
+    max-width: 450px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+.payment-options{
+    width: calc(100% - 40px);
+    display: grid;
+    grid-template-columns: 33% 34% 33%;
+    gap: 20px;
+    padding: 10px;
+}
+
+.payment-options button{
+    height: 55px;
+    background: #f2f2f2;
+    border-radius: 11px;
+    padding: 0;
+    border: 0;
+    outline: none;
+}
+
+.separator{
+    width: calc(100% - 20px);
+    display: none;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 10px;
+    color: #8B8E98;
+    margin: 0 10px;
+}
+
+.separator > p{
+    word-break: keep-all;
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    font-size: 11px;
+    margin: auto;
+}
+
+.separator .line{
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    border: 0;
+    background-color: #e8e8e8;
+    margin: auto;
+}
+
+.credit-card-info{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.input-container {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.split {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    gap: 15px;
+}
+
+.split input{
+    width: 100%;
+}
+
+.input-label{
+    font-size: 10px;
+    color: #8b8e98;
+    font-weight: 600;
+}
+
+.input-field{
+    width: auto;
+    height: 40px;
+    padding: 0 0 0 16px;
+    border-radius: 9px;
+    outline: none;
+    background-color: #F2F2F2;
+    border: 1px solid #e5e5e500;
+    transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.input-field:focus {
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 0px 2px #242424;
+    background-color: transparent;
+}
+
+.purchase-btn {
+    height: 55px;
+    background: #F2F2F2;
+    border-radius: 11px;
+    border: 0;
+    outline: none;
+    color: #ffffff;
+    font-size: 13px;
+    font-weight: 700;
+    background: linear-gradient(180deg, #363636 0%, #1B1B1B 50%, #000000 100%);
+    box-shadow: 0px 0px 0px 0px #FFFFFF, 0px 0px 0px 0px #000000;
+    transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+ 
+.purchase-btn:hover {
+    box-shadow: 0px 0px 0px 2px #FFFFFF, 0px 0px 0px 4px #0000003a;
+}
+
+/* Reset input number styles */
+.input-field::-webkit-outer-spin-button,
+.input-field::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
